# hardshell

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CHANGE_LOG.md  README.md  assessment_report.html  assessment_report.txt  hardshell.spec  main.spec  pyproject.toml  report.txt  sysdtest.py  tox.ini
.github/workflows/: main.yml
config/: global.toml  linux.toml  linux.toml.bak  old_linux.toml
docs/: Gemfile  conf.py  faq.md  getting_started.md  requirements.txt
docs/contributing/: index.md  issue_triage.md  release_process.md  the_basics.md
docs/source/: conf.py
docs/src/: change_log.md  checks.xlsx  conf.py  index.md  index.rst  license.md
docs/src/config/: check_types.md  global_config.md  index.md
docs/src/contributing/: basics.md  index.md  issues.md  releases.md
hardshell/config/: global.toml  linux.toml
hardshell/scanners/: linux.py  scan.py
hardshell/utils/: common.py
src/hardshell/: __init__.py  checks.py  linux.py  main.py  report.py  scan.py
src/hardshell/checks/: __init__.py  base.py  system.py
src/hardshell/checks/linux/: __init__.py  accounts.py  module.py  modules.py  mount.py  package.py  path.py  regex.py  service.py  unit.py
src/hardshell/common/: checks.py  common.py  config.py  dnf.py  logging.py  report.py
src/hardshell/scanners/: linux.py  scan.py
src/hardshell/utils/: checks.py  common.py  config.py
tests/: test_hardshell.py
tests/unit/: test_get_permissions.py
