[tool.poetry]
authors = ["Tom Burge <tom@tomburge.org>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
description = "Harden your operating system against vulnerabilities"
documentation = "https://github.com/cloudstuffio/hardshell"
homepage = "https://github.com/cloudstuffio/hardshell"
keywords = ["harden", "hardshell", "os", "security"]
license = "MIT"
name = "hardshell"
readme = "README.md"
repository = "https://github.com/cloudstuffio/hardshell"
version = "0.5.0"

[tool.black]
line-length = 88

[tool.isort]
atomic         = true
profile        = "black"
skip_gitignore = true

[tool.poetry.scripts]
hardshell = "src.hardshell.main:main"

[tool.poetry.dependencies]
click   = "^8.1.7"
distro  = "^1.9.0"
psutil  = "^6.0.0"
pystemd = "^0.13.2"
python  = ">=3.8,<3.13"
toml    = "^0.10.2"

[tool.poetry.group.exe.dependencies]
pyinstaller = "^6.8.0"

[tool.poetry.group.lint.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest          = "^7.4"
pytest-cov      = "^4.1.0"
pytest-randomly = "^3.15.0"
tox             = "^4.15.1"

[tool.poetry_bumpversion.file."src/hardshell/__init__.py"]
replace = '__version__ = "{new_version}"'
search  = '__version__ = "{current_version}"'

[tool.poetry_bumpversion.file."tests/test_hardshell.py"]
replace = 'assert __version__ == "{new_version}"'
search  = 'assert __version__ == "{current_version}"'

[tool.pytest.ini_options]

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
